--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
           <div class="card custom-card mx-auto">
             <div class="row text-center">
               <div class="col-4 d-flex align-items-center">
-                <img id="weather-icon" src="..." class="img-fluid" alt="..." />
+                <img
+                  id="weather-icon"
+                  src="./weather/01d.png"
+                  class="img-fluid"
+                  alt="..."
+                />
               </div>
               <div class="col-8">
                 <div class="card-body">
@@ -83,6 +88,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="scripts.js" />
+    <script src="./scripts.js"></script>
   </body>
 </html>
