--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@
         <div class="option">
           <span class="opt">Simpleton</span>
           <label class="switch">
-            <input id="check" type="checkbox" onclick="changeTimeType()" />
+            <input
+              id="check"
+              type="checkbox"
+              checked
+              onclick="changeTimeType()"
+            />
             <span class="slider"></span>
           </label>
           <span class="opt"> Programmer </span>
